--- a/css/main.css
+++ b/css/main.css
@@ -310,6 +310,9 @@ sup > a::before,
 .navbar .nav-item .nav-link i {
   font-size: 0.875rem;
 }
+.navbar .nav-item .nav-link i:only-child {
+  margin: 0 0.2rem;
+}
 .navbar .navbar-toggler {
   border-width: 0;
   outline: 0;
@@ -338,6 +341,7 @@ sup > a::before,
   color: var(--navbar-text-color);
   background-color: rgba(0,0,0,0.3);
   border: none;
+  min-width: 8rem;
   -webkit-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
   transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
 }
@@ -452,6 +456,9 @@ sup > a::before,
   max-width: calc(960px - 6rem);
   width: 80%;
   overflow-wrap: break-word;
+}
+.banner-text .typed-cursor {
+  margin: 0 0.2rem;
 }
 @media (max-width: 767px) {
   #subtitle,
@@ -1293,10 +1300,12 @@ i.iconfont {
   padding-bottom: 1.45rem;
   padding-right: 1rem;
   line-height: 1.5;
+  margin-bottom: 1rem;
 }
 .markdown-body .code-wrapper {
   position: relative;
   border-radius: 4px;
+  margin-bottom: 1rem;
 }
 .markdown-body .hljs,
 .markdown-body .highlight pre,
@@ -1970,8 +1979,7 @@ input[type=checkbox] {
 .category-bar .list-group-item.active::before {
   content: "\e61f";
   font-weight: initial;
-  position: absolute;
-  left: -1.25rem;
+  margin-right: 0.25rem;
 }
 .category-bar .list-group-count {
   margin-left: 0.2rem;
